a lot of fixes in test printer